Changed file paths

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./styles/index.css" />
-    <script src="./js/index.js" defer type="module"></script>
+    <link rel="stylesheet" href="./src/styles/index.css" />
+    <script src="./src/js/index.js" defer type="module"></script>
     <title>Snake</title>
   </head>
   <body>
